# web-screenshot-skill-

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  web_screenshot.py
