[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-screenshot"
version = "1.0.0"
description = "Web page screenshot capture tool for multimodal LLM visual analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "QinIndexCode"}
]
keywords = ["screenshot", "playwright", "multimodal", "llm", "web", "capture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.40.0",
]

[project.scripts]
web-screenshot = "web_screenshot:main"

[project.urls]
Homepage = "https://github.com/QinIndexCode/web-screenshot"
Repository = "https://github.com/QinIndexCode/web-screenshot"
